# pizeon

./: Cargo.toml  README.md  TODO
.github/workflow/: publish.yml
Pizeon/: Client.md  Server.md
Pizeon/Client/: Client Data.md
crates/pizeon/: Cargo.toml
crates/pizeon-client/: Cargo.toml  config.toml
crates/pizeon-client/migrations/: 20240430090735_create-notices.sql
crates/pizeon-client/src/: api_client.rs  database.rs  encryption.rs  history.rs  kv.rs  lib.rs  notice.rs  ordering.rs  secrets.rs  settings.rs  sync.rs  utils.rs
crates/pizeon-client/src/history/: builder.rs  store.rs
crates/pizeon-client/src/import/: bash.rs  fish.rs  mod.rs  nu.rs  nu_histdb.rs  resh.rs  xonsh.rs  xonsh_sqlite.rs  zsh.rs  zsh_histdb.rs
crates/pizeon-client/src/notice/: builder.rs
crates/pizeon-client/src/record/: encryption.rs  mod.rs  sqlite_store.rs  store.rs  sync.rs
crates/pizeon-client/src/settings/: dotfiles.rs
crates/pizeon-client/tests/data/: xonsh-history.sqlite
crates/pizeon-client/tests/data/xonsh/: xonsh-82eafbf5-9f43-489a-80d2-61c7dc6ef542.json  xonsh-de16af90-9148-4461-8df3-5b5659c6420d.json
crates/pizeon-common/: Cargo.toml
crates/pizeon-common/src/: api.rs  calendar.rs  lib.rs  record.rs  shell.rs  utils.rs
crates/pizeon-dotfiles/: Cargo.toml
crates/pizeon-dotfiles/src/: lib.rs  shell.rs  store.rs
crates/pizeon-dotfiles/src/shell/: bash.rs  fish.rs  xonsh.rs  zsh.rs
crates/pizeon-dotfiles/src/store/: var.rs
crates/pizeon-server/: Cargo.toml  server.toml
crates/pizeon-server-database/: Cargo.toml
crates/pizeon-server-database/src/: calendar.rs  lib.rs  models.rs
crates/pizeon-server-postgres/: Cargo.toml
crates/pizeon-server-postgres/migrations/: 20210425153757_create_users.sql
crates/pizeon-server-postgres/src/: lib.rs  wrappers.rs
crates/pizeon-server/src/: lib.rs  metrics.rs  router.rs  settings.rs  utils.rs
crates/pizeon-server/src/handlers/: history.rs  mod.rs  record.rs  status.rs  user.rs
crates/pizeon-server/src/handlers/v0/: me.rs  mod.rs  record.rs  store.rs
crates/pizeon/src/: main.rs  sync.rs
crates/pizeon/src/command/: client.rs  contributors.rs  gen_completions.rs  mod.rs  server.rs
crates/pizeon/src/command/client/: account.rs  default_config.rs  doctor.rs  dotfiles.rs  history.rs  import.rs  info.rs  init.rs  kv.rs  notice.rs  search.rs  stats.rs  store.rs  sync.rs
crates/pizeon/src/command/client/account/: change_password.rs  delete.rs  login.rs  logout.rs  register.rs
crates/pizeon/src/command/client/dotfiles/: alias.rs  var.rs
crates/pizeon/src/command/client/init/: bash.rs  fish.rs  xonsh.rs  zsh.rs
crates/pizeon/src/command/client/search/: cursor.rs  duration.rs  engines.rs  history_list.rs  inspector.rs  interactive.rs  sort.rs
crates/pizeon/src/command/client/search/engines/: db.rs  skim.rs
crates/pizeon/src/command/client/store/: pull.rs  purge.rs  push.rs  rebuild.rs  rekey.rs  verify.rs
crates/pizeon/src/command/client/sync/: status.rs
crates/pizeon/src/shell/: pizeon.bash  pizeon.fish  pizeon.nu  pizeon.xsh  pizeon.zsh
crates/pizeon/tests/: sync.rs  users.rs
crates/pizeon/tests/common/: mod.rs
demo/: README.md  permission.sh
demo/client/Cat/.gnupg/: pubring.kbx  pubring.kbx~  trustdb.gpg
demo/client/Cat/.gnupg/openpgp-revocs.d/: 4C51CD0201C5B8FEA87DADB1CCDF228DF00D2657.rev
demo/client/Cat/.gnupg/private-keys-v1.d/: 20371151F25FCF67FA92B38EEA8AFC901EC6C3A0.key  E825FE0FDFE3773B32078C60884FEE39C6CD3A4B.key
demo/client/Dog/.gnupg/: pubring.kbx  pubring.kbx~  trustdb.gpg
demo/client/Dog/.gnupg/openpgp-revocs.d/: 273CD8C340363C1C0B91620B9D7C2A79D5E9A172.rev
demo/client/Dog/.gnupg/private-keys-v1.d/: 98E597145C3BAFD4A9B0C9BCD00F72F8EF96E67F.key  A021F154E61829F431F319ADB89BDD0490B455ED.key
demo/client/Penguin/.gnupg/: pubring.kbx  pubring.kbx~  trustdb.gpg
demo/client/Penguin/.gnupg/openpgp-revocs.d/: 394A2AEAACAA100ECE5D801CD86CC257BE480D82.rev
demo/client/Penguin/.gnupg/private-keys-v1.d/: 79022551CCC7AC6B495A07F154DC882745551CEF.key  8A508A3A3D44D9925B9F99FD8184EC0E5445E25F.key
demo/client/Tiger/.gnupg/: pubring.kbx  pubring.kbx~  trustdb.gpg
demo/client/Tiger/.gnupg/openpgp-revocs.d/: 1C31E983691970F9C77668480D6DE04FD7421C98.rev
demo/client/Tiger/.gnupg/private-keys-v1.d/: 80BBCFFC17574B12410F996EA313350DFA530780.key  8330577EB3A607D3F1521383E5981B40582BA090.key
demo/server/CC/: README.md
demo/server/CC/.gnupg/: pubring.kbx  pubring.kbx~  trustdb.gpg
demo/server/CC/.gnupg/openpgp-revocs.d/: A25CD36DC0D0915BE8D9FFE4A3A5CD7B9834F622.rev
demo/server/JD/.gnupg/: pubring.kbx  pubring.kbx~  trustdb.gpg
demo/server/JS/: README.md
demo/server/LC/: README.md
demo/server/LC/.gnupg/: pubring.kbx  pubring.kbx~  trustdb.gpg
demo/server/SE/: README.md
demo/server/SE/.gnupg/: pubring.kbx  pubring.kbx~  trustdb.gpg
demo/server/ZJU/: README.md
demo/server/ZJU/.gnupg/: pubring.kbx  pubring.kbx~  trustdb.gpg
pizeon-bubble/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vulnerability
pizeon-bubble/src/: App.vue  main.ts  styles.css
pizeon-bubble/src-tauri/: Cargo.toml  tauri.conf.json
pizeon-bubble/src-tauri/src/: main.rs  notices.rs  repos.rs
pizeon-bubble/src-tauri/src/api/: kitchen.rs  mod.rs  notices.rs  repos.rs
pizeon-bubble/src/components/: Abstract.vue  Bill.vue  Kitchen.vue  Meal.vue  Meals.vue  Office.vue  Repo.vue  Slice.vue
pizeon-bubble/src/components/meal/: Classic.vue  Event.vue
pizeon-bubble/src/components/workspace/: Event.vue  Slice.vue
pizeon-bubble/src/utils/: draft.ts  email.ts  ingredient.ts  slice.ts  time.ts  type.ts
pizeon-client/: package.json  pnpm-lock.yaml
pizeon-client/src/: App.vue  router.ts
pizeon-client/src-tauri/: Cargo.toml  tauri.conf.json
pizeon-client/src-tauri/src/: main.rs  notices.rs  repos.rs  storeroom.rs
pizeon-client/src/components/: Abstract.vue  Bill.vue  Fridge.vue  Junk.vue  Kitchen.vue  Meal.vue  Meals.vue  Menu.vue  Notice.vue  Office.vue  Repo.vue  Unwelcomed.vue
pizeon-client/src/utils/: time.ts
(+46 files in other folders)
