[package]
name = "pizeon-dotfiles"
description = "The dotfiles crate for Pizeon"
edition = "2021"
version = "0.0.0"                             # atuin intentionally not the same as the rest

authors.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pizeon-common = { path = "../pizeon-common" }
pizeon-client = { path = "../pizeon-client" }

eyre = { workspace = true }
tokio = { workspace = true }
rmp = { version = "0.8.11" }
rand = { workspace = true }
serde = { workspace = true }
crypto_secretbox = "0.1.1"
