[package]
name = "pizeon-server-database"
edition = "2021"
description = "server database library for pizeon"

version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
pizeon-common = { path = "../pizeon-common", version = "18.2.0" }

tracing = "0.1"
time = { workspace = true }
eyre = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
