[package]
name = "pizeon-server-postgres"
edition = "2021"
description = "server postgres database library for pizeon"

version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
pizeon-common = { path = "../pizeon-common" }
pizeon-server-database = { path = "../pizeon-server-database" }

eyre = { workspace = true }
tracing = "0.1"
time = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
futures-util = "0.3"
