[package]
name = "pizeon"
edition = "2021"
description = "pizeon - free notifier"
# readme = "./README.md"

rust-version = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version  }-{ target }.tar.gz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

# [package.metadata.deb]
# maintainer = "Ellie Huxtable <ellie@elliehuxtable.com>"
# copyright = "2021, Ellie Huxtable <ellie@elliehuxtable.com>"
# license-file = ["LICENSE"]
# depends = "$auto"
# section = "utility"

[package.metadata.rpm]
package = "pizeon"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
pizeon = { path = "/usr/bin/pizeon" }

[features]
default = ["client", "sync", "server", "clipboard", "check-update"]
client = ["pizeon-client"]
sync = ["pizeon-client/sync"]
server = ["pizeon-server", "pizeon-server-postgres", "tracing-subscriber"]
clipboard = ["cli-clipboard"]
check-update = ["pizeon-client/check-update"]

[dependencies]
pizeon-server-postgres = { path = "../pizeon-server-postgres", optional = true }
pizeon-server = { path = "../pizeon-server", optional = true }
pizeon-client = { path = "../pizeon-client", optional = true, default-features = false }
pizeon-common = { path = "../pizeon-common" }
pizeon-dotfiles = { path = "../pizeon-dotfiles" }

log = { workspace = true }
env_logger = "0.11.2"
time = { workspace = true }
eyre = { workspace = true }
directories = { workspace = true }
indicatif = "0.17.5"
serde = { workspace = true }
serde_json = { workspace = true }
crossterm = { version = "0.27", features = ["use-dev-tty"] }
unicode-width = "0.1"
itertools = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
interim = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
clap_complete = "4.5.1"
clap_complete_nushell = "4.5.1"
fs-err = { workspace = true }
whoami = { workspace = true }
rpassword = "7.0"
semver = { workspace = true }
rustix = { workspace = true }
runtime-format = "0.1.3"
tiny-bip39 = "1"
futures-util = "0.3"
fuzzy-matcher = "0.3.7"
colored = "2.0.4"
ratatui = "0.26"
tracing = "0.1"
uuid = { workspace = true }
unicode-segmentation = "1.11.0"
serde_yaml = "0.9.32"
sysinfo = "0.30.7"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
cli-clipboard = { version = "0.4.0", optional = true }

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["ansi", "fmt", "registry", "env-filter"]
optional = true

[dev-dependencies]
tracing-tree = "0.3"
